# ZZZeroWrapper

./: .gitignore
app/nonebot/: pyproject.toml
data/gsuid-core/: config.example.json
data/gsuid-nonebot/: .gitignore
